basic controler and service implementation, with tests.
